Actions
Bug #9660
closedloader: fix typos in libefi/env.c
Start date:
2018-07-18
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
eif-show should be efi-show.
Updated by Electric Monk almost 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 5882b622b7e2afa5385d4601dd82f81066f62d67
commit 5882b622b7e2afa5385d4601dd82f81066f62d67 Author: Toomas Soome <tsoome@me.com> Date: 2018-07-18T17:23:41.000Z 9660 loader: fix typos in libefi/env.c Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Rob Johnston <rob.johnston@joyent.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions