9660 loader: fix typos in libefi/env.c Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Rob Johnston <rob.johnston@joyent.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Robert Mustacchi <rm@joyent.com>